# wrapwrap

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  examples.txt  geowrapper.cpp  wrapwrap.cpp
.github/workflows/: build.yml  release-win-exe.yml
